# agentic-ai-for-clm

./: .env.example  .gitignore  CLAUDE.md  EXPERIMENT_CHECKLIST.md  QUICKSTART.md  README.md  experiment_models.MD  pyproject.toml  report.md
configs/experiments/: baselines.yaml  multiagent.yaml
configs/prompts/: ip_commercial.yaml  orchestrator.yaml  risk_liability.yaml  temporal_renewal.yaml
dashboard/: .gitignore  package-lock.json  package.json
docs/: EXPERIMENT_CHECKLIST.md  PROGRESS.md  PROGRESS_REPORT_January.md  b4_overextraction_issue.md  cloud-inference.md  data_selection_impact.md  experiment-design.md  f1_jaccard_discrepancy_diagnosis_20260302_150000.md  retrieve-then-extract-plan.md  supervisor-update-2026-03-17.md
experiments/diagnostics/: b1_qwen3-4b_sample.json  classify_then_extract_claude-haiku-4.5_20260416_014046_diagnostics.json  classify_then_extract_claude-opus-4.6_20260416_014046_diagnostics.json  classify_then_extract_claude-sonnet-4.6_20260416_092325_diagnostics.json  classify_then_extract_claude-sonnet-4_20260415_235740_diagnostics.json  classify_then_extract_gemini-2.5-flash_20260416_092325_diagnostics.json  (+118 more)
notebooks/: 01_data_exploration.ipynb  02_workflow_test.ipynb  03_baseline_calibration.ipynb  04_multiagent_experiment copy.ipynb  04_multiagent_experiment.ipynb  05_category_tier_analysis.ipynb
scripts/: analyze_results.py  export_long_format.py  run_batch.py  run_experiment.py  test_loader.py
src/: __init__.py
src/agents/: base.py  (+10 more)
tests/: __init__.py  test_agents.py  test_data_loader.py  test_metrics.py  test_statistical.py
(+261 files in other folders)
